<resources>
    <string name="app_name">Gdump</string>
    <string name="title_scan">Scan Code</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_myprofile">My Profile</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="icon_string">Icon of the project</string>
    <string name="google_signin_text">Sign In with Google</string>
    <string name="hello_user">hello, User</string>
    <string name="your_registerd_email">Your Registerd Email</string>
    <string name="g_point_prompt">Your G-dump points: 0.0</string>
    <string name="scan_instructions">Please, Point your Camera or Enter the Unique Code below!</string>
    <string name="enter_code_instruction">Enter Code Here!</string>
</resources>
