<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/dash_proPic"
                android:layout_width="150dp"
                android:layout_height="143dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/profilepic"
                app:civ_border_color="@color/colorAccent"
                app:civ_border_width="3dp" />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:id="@+id/dash_image_progressbar"/>




        </RelativeLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textStyle="bold"
            android:text="@string/hello_user"
            android:layout_gravity="center"
            android:id="@+id/dash_username_edittext"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/your_registerd_email"
            android:layout_gravity="center"
            android:id="@+id/dash_email_edittext"/>


        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/dash_isemailverified_edittext"
            android:clickable="true"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Your Email: " />


    <TextView
        android:id="@+id/dash_points_edittext"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/g_point_prompt" />


    </LinearLayout>

</ScrollView>